objects/SCP_Certa_GC__Strategic_Initiative__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Initiatives</relationshipLabel>
        <relationshipName>StrategicInitiatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Initiative_URL__c</fullName>
        <label>Strategic_Initiative_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Initiative__c</fullName>
        <label>Strategic Initiative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Title__c</fullName>
        <label>Titulo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Strategic Initiative</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Strategic Initiatives</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Initiatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>